--- a/Dev020101/Dev020101.csproj
+++ b/Dev020101/Dev020101.csproj
@@ -33,8 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MySql.Data, Version=6.7.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <HintPath>..\packages\MySql.Data.6.7.9\lib\net45\MySql.Data.dll</HintPath>
+    <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <HintPath>..\packages\MySql.Data.6.9.9\lib\net45\MySql.Data.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -82,7 +82,7 @@
     <Compile Include="Models\EmployeeDegrees.cs" />
     <Compile Include="Models\EmployeePositions.cs" />
     <Compile Include="Models\Employees.cs" />
-    <Compile Include="Models\Headqauters.cs" />
+    <Compile Include="Models\Headquarters.cs" />
     <Compile Include="Models\Levels.cs" />
     <Compile Include="Models\Positions.cs" />
     <Compile Include="Models\Projects.cs" />
@@ -114,7 +114,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="packages.config" />
     <None Include="Properties\DataSources\Dev020101.Models.Employees.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
